changed both input name properties to name to allow server to parse it as an array

--- a/home.html
+++ b/home.html
@@ -18,9 +18,9 @@
             -->
             <br>
             <br>
-            <input type="text" name="location0" style="width: 50%; margin: 3px">
+            <input type="text" name="location" style="width: 50%; margin: 3px">
             <br>
-            <input type="text" name="location1" style="width: 50%; margin: 3px">
+            <input type="text" name="location" style="width: 50%; margin: 3px">
             <br>
             <br>
             <input type="Submit" value="Next">
